fix(ui): skipped analysis
Signed-off-by: francois.samin <francois.samin@ovhcloud.com>

--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
@@ -39,6 +39,16 @@
   </ng-template>
 </nz-result>
 
+<nz-result *ngIf="response && response.status === 'Skipped'" nzTitle="Analysis skipped." [nzSubTitle]="subTitle" [nzIcon]="iconTemplate">
+  <ng-template #subTitle>
+    <div class="message">
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{response.analysis_id}}"></span><br />
+      <b>Status:</b> {{response?.status}}
+      <b>Info:</b> {{response?.error}}
+    </div>
+  </ng-template>
+</nz-result>
+
 <nz-result *ngIf="analysis && analysis.status === 'Error'" nzTitle="Analysis failed." [nzSubTitle]="subTitle" nzStatus="error">
   <ng-template #subTitle>
     <div class="message">
