--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
@@ -39,12 +39,13 @@
   </ng-template>
 </nz-result>
 
-<nz-result *ngIf="response && response.status === 'Skipped'" nzTitle="Analysis skipped." [nzSubTitle]="subTitle">
+<nz-result *ngIf="analysis && analysis.status === 'Skipped'" nzTitle="Analysis skipped." [nzSubTitle]="subTitle">
   <ng-template #subTitle>
     <div class="message">
-      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{response.analysis_id}}"></span><br />
-      <b>Status:</b> {{response?.status}}
-      <b>Info:</b> {{response?.data?.error}}
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{analysis.id}}"></span><br />
+      <b>Status:</b> {{analysis?.status}}
+      <b>Info:</b> {{analysis?.data?.error}}
+      <button nz-button (click)="clearForm()">Clear</button>
     </div>
   </ng-template>
 </nz-result>
