--- a/ui/src/app/views/projectv2/explore/explore-entity.html
+++ b/ui/src/app/views/projectv2/explore/explore-entity.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="entity && !loading">
-	<app-entity-form *ngIf="entity.type !== 'Workflow'" [path]="entity.file_path" [data]="entity.data"
-		[schema]="jsonSchema" [entityType]="entity.type" [parentType]="'V2'+entity.type"></app-entity-form>
-	<app-projectv2-explore-entity-workflow *ngIf="entity.type === 'Workflow'" [parentType]="'V2'+entity.type"
-		[schema]="jsonSchema" [data]="entity.data" [path]="entity.file_path"></app-projectv2-explore-entity-workflow>
+	<app-entity-form *ngIf="entity.type !== 'Workflow' || isWorkflowFromTemplate" [path]="entity.file_path"
+		[data]="entity.data" [schema]="jsonSchema" [entityType]="entity.type"
+		[parentType]="'V2'+entity.type"></app-entity-form>
+	<app-projectv2-explore-entity-workflow *ngIf="entity.type === 'Workflow' && !isWorkflowFromTemplate"
+		[parentType]="'V2'+entity.type" [schema]="jsonSchema" [data]="entity.data"
+		[path]="entity.file_path"></app-projectv2-explore-entity-workflow>
 	<div class="footer">
 		<div class="buttons">
 			<button nz-button nzType="primary" [nzLoading]="loading" [disabled]="true">
