--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -169,7 +169,7 @@
 			<nz-option nzValue="started:desc" nzLabel="started desc"></nz-option>
 			<nz-option nzValue="started:asc" nzLabel="started asc"></nz-option>
 		</nz-select>
-		<nz-pagination [nzPageIndex]="pageIndex" [nzPageSize]="20" [nzTotal]="totalCount"
+		<nz-pagination [nzPageIndex]="pageIndex" [nzPageSize]="20" [nzTotal]="totalCount" nzSize="small"
 			(nzPageIndexChange)="pageIndexChange($event)"></nz-pagination>
 	</div>
 </div>
