--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
@@ -12,14 +12,13 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label [nzSpan]="6" nzFor="branch">Branch</nz-form-label>
+    <nz-form-label [nzSpan]="6" nzFor="ref">Ref</nz-form-label>
     <nz-form-control [nzSpan]="14">
-      <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a branch" formControlName="branch" id="branch">
-        <nz-option *ngFor="let branch of branches" [nzLabel]="branch" [nzValue]="branch"></nz-option>
-      </nz-select>
+      <app-repository-ref-select [branches]="branches" [tags]="tags" formControlName="ref"
+        id="ref"></app-repository-ref-select>
     </nz-form-control>
   </nz-form-item>
-  
+
   <nz-form-item *ngIf="!response">
     <nz-form-control [nzSpan]="12" [nzOffset]="6">
       <button nz-button nzType="primary">Start</button>
@@ -27,13 +26,15 @@
   </nz-form-item>
 </form>
 
-<nz-result *ngIf="response && response.status === 'InProgress'" nzTitle="Analysis in progress." [nzSubTitle]="subTitle" [nzIcon]="iconTemplate">
+<nz-result *ngIf="response && response.status === 'InProgress' && !analysis" nzTitle="Analysis in progress."
+  [nzSubTitle]="subTitle" [nzIcon]="iconTemplate">
   <ng-template #iconTemplate>
     <span nz-icon nzType="loading" nzTheme="outline"></span>
   </ng-template>
   <ng-template #subTitle>
     <div class="message">
-      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{response.analysis_id}}"></span><br />
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null"
+        nzContent="{{response.analysis_id}}"></span><br />
       <b>Status:</b> {{response?.status}}
     </div>
   </ng-template>
@@ -42,7 +43,8 @@
 <nz-result *ngIf="analysis && analysis.status === 'Skipped'" nzTitle="Analysis skipped." [nzSubTitle]="subTitle">
   <ng-template #subTitle>
     <div class="message">
-      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{analysis.id}}"></span><br />
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null"
+        nzContent="{{analysis.id}}"></span><br />
       <b>Status:</b> {{analysis?.status}}
       <b>Info:</b> {{analysis?.data?.error}}
       <button nz-button (click)="clearForm()">Clear</button>
@@ -50,10 +52,12 @@
   </ng-template>
 </nz-result>
 
-<nz-result *ngIf="analysis && analysis.status === 'Error'" nzTitle="Analysis failed." [nzSubTitle]="subTitle" nzStatus="error">
+<nz-result *ngIf="analysis && analysis.status === 'Error'" nzTitle="Analysis failed." [nzSubTitle]="subTitle"
+  nzStatus="error">
   <ng-template #subTitle>
     <div class="message">
-      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{analysis.id}}"></span><br />
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null"
+        nzContent="{{analysis.id}}"></span><br />
       <b>Status:</b> {{analysis?.status}}<br />
       <button nz-button (click)="clearForm()">Clear</button>
     </div>
@@ -74,10 +78,12 @@
   </div>
 </nz-result>
 
-<nz-result *ngIf="analysis && analysis.status === 'Success'" nzTitle="Analysis succeed." [nzSubTitle]="subTitle" nzStatus="success">
+<nz-result *ngIf="analysis && analysis.status === 'Success'" nzTitle="Analysis succeed." [nzSubTitle]="subTitle"
+  nzStatus="success">
   <ng-template #subTitle>
     <div class="message">
-      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null" nzContent="{{analysis.id}}"></span><br />
+      <b>Analysis ID:</b><span nz-typography nzCopyable [nzCopyTooltips]="null"
+        nzContent="{{analysis.id}}"></span><br />
       <b>Status:</b> {{analysis?.status}}<br />
       <button nz-button (click)="clearForm()">Clear</button>
     </div>
