--- a/ui/src/app/views/projectv2/run-start/run-start.html
+++ b/ui/src/app/views/projectv2/run-start/run-start.html
@@ -12,12 +12,10 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label [nzSpan]="6" nzFor="branch">Branch</nz-form-label>
+    <nz-form-label [nzSpan]="6" nzFor="ref">Ref</nz-form-label>
     <nz-form-control [nzSpan]="14">
-      <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a branch" formControlName="branch" id="branch"
-        (ngModelChange)="branchChange($event)">
-        <nz-option *ngFor="let branch of branches" [nzLabel]="branch" [nzValue]="branch"></nz-option>
-      </nz-select>
+      <app-repository-ref-select [branches]="branches" [tags]="tags" formControlName="ref" id="ref"
+        (ngModelChange)="refChange($event)"></app-repository-ref-select>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -36,12 +34,10 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item *ngIf="this.validateForm.controls.sourceRepository.value">
-    <nz-form-label [nzSpan]="6" nzFor="sourceBranch">Source branch</nz-form-label>
+    <nz-form-label [nzSpan]="6" nzFor="sourceRef">Source ref</nz-form-label>
     <nz-form-control [nzSpan]="14">
-      <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a branch" formControlName="sourceBranch"
-        id="sourceBranch">
-        <nz-option *ngFor="let branch of sourceBranches" [nzLabel]="branch" [nzValue]="branch"></nz-option>
-      </nz-select>
+      <app-repository-ref-select [branches]="sourceBranches" [tags]="sourceTags" formControlName="sourceRef"
+        id="sourceRef"></app-repository-ref-select>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item *ngIf="!event">
