--- a/ui/src/app/views/projectv2/run/run.html
+++ b/ui/src/app/views/projectv2/run/run.html
@@ -8,7 +8,7 @@
                     <app-searchable [link]="['/project', projectKey, 'run']"
                         [params]="{workflow: workflowRun.vcs_server+'/'+workflowRun.repository+'/'+workflowRun.workflow_name}">
                         <a [routerLink]="['/project', projectKey, 'explore', 'vcs', workflowRun.vcs_server, 'repository', workflowRun.repository, 'workflow', workflowRun.workflow_name]"
-                            [queryParams]="{branch: workflowRun.contexts.git.ref_name}">
+                            [queryParams]="{ref: workflowRun.workflow_ref}">
                             {{workflowRun.vcs_server}}/{{workflowRun.repository}}/{{workflowRun.workflow_name}}</a>
                     </app-searchable>
                     <span class="number">#{{workflowRun.run_number}}</span>
