fix(ui): improve run v2 filter input
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -27,13 +27,14 @@
 						#filterInputDirective=nzAutocompleteTrigger (click)="onClickInput()" ngDefaultControl
 						[ngModelOptions]="{standalone: true}" />
 					<nz-autocomplete nzBackfill #filterAutoComplete>
-						<nz-auto-option *ngIf="filterText?.length > 0" [nzLabel]="filterText" [nzValue]="filterText">{{filterText}}
-							-
-							submit
+						<nz-auto-option *ngIf="!filterText || filterText.length > 0 && filterText[filterText.length-1] !== ':'"
+							[nzLabel]="filterText" [nzValue]="filterText">
+							{{filterText ? filterText + ' - ' : ''}}submit
 						</nz-auto-option>
 						<nz-auto-optgroup *ngIf="availableFilters.length > 0" nzLabel="Narrow your search">
 							<nz-auto-option *ngFor="let filter of availableFilters" [nzLabel]="computeFilterValue(filter)"
-								[nzValue]="computeFilterValue(filter)"><b>{{filter.key}}:</b> {{filter.example}}
+								[nzValue]="computeFilterValue(filter)"><b>{{filter.key}}:</b>
+								{{filter.example}}
 							</nz-auto-option>
 						</nz-auto-optgroup>
 						<nz-auto-optgroup *ngIf="selectedFilter && selectedFilter.options?.length > 0" nzLabel="Narrow your search">
