--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
@@ -14,7 +14,7 @@
   <nz-form-item>
     <nz-form-label [nzSpan]="6" nzFor="ref">Ref</nz-form-label>
     <nz-form-control [nzSpan]="14">
-      <app-repository-ref-select [branches]="branches" [tags]="tags" formControlName="ref"
+      <app-repository-ref-select [branches]="branches" [tags]="tags" formControlName="ref" placeHolder="Select a ref"
         id="ref"></app-repository-ref-select>
     </nz-form-control>
   </nz-form-item>
