--- a/ui/src/app/views/projectv2/run/run-results.html
+++ b/ui/src/app/views/projectv2/run/run-results.html
@@ -14,8 +14,13 @@
 	</ng-template>
 </div>
 <nz-list nzSize="small">
-	<nz-list-item *ngFor="let result of filteredResults" (click)="clickResult(result)">
-		{{result.identifier}}
-		<span class="label">{{result.label}}</span>
+	<nz-list-item *ngFor="let item of filteredResults" (click)="clickResult(item.result)">
+		<span class="identifier">{{item.result.identifier}}</span>
+		<span class="label">{{item.result.label}}</span>
+		<a *ngIf="item.downloadLink" [href]="item.downloadLink" target="_blank" rel="noopener noreferrer"
+			title="Download the result" (click)="$event.stopPropagation()"><i nz-icon nzType="download"
+				nzTheme="outline"></i></a>
+		<a *ngIf="item.viewLink" [href]="item.viewLink" target="_blank" rel="noopener noreferrer" title="View the result"
+			(click)="$event.stopPropagation()"><i nz-icon nzType="export" nzTheme="outline"></i></a>
 	</nz-list-item>
 </nz-list>
